--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -2,7 +2,7 @@
 	"image": "mcr.microsoft.com/devcontainers/go:2-1.25-bookworm",
 	"runArgs": [
 		"--name",
-		"hackerrank-algorithms_devcontainer"
+		"hackerrank_devcontainer"
 	],
 	"features": {
 		"ghcr.io/devcontainers/features/node:1": {
