--- a/.editorconfig
+++ b/.editorconfig
@@ -8,10 +8,9 @@ indent_style = tab
 insert_final_newline = true
 trim_trailing_whitespace = true
 
-
-[*.{yml,yaml}]
-indent_size = 2
-indent_style = space
-
 [*.md]
 indent_size = 2
+
+[*.yaml]
+indent_size = 2
+indent_style = space
