--- a/package.json
+++ b/package.json
@@ -3,9 +3,8 @@
 	"type": "module",
 	"private": true,
 	"devDependencies": {
-		"@biomejs/biome": "^2",
 		"lefthook": "^2",
-		"prettier": "^3",
+		"oxfmt": "^0.31.0",
 		"typescript": "^5"
 	}
 }
