--- a/package.json
+++ b/package.json
@@ -3,8 +3,9 @@
 	"type": "module",
 	"private": true,
 	"devDependencies": {
-		"lefthook": "^2",
+		"@types/bun": "^1.3.9",
+		"lefthook": "^2.1.0",
 		"oxfmt": "^0.31.0",
-		"typescript": "^5"
+		"typescript": "^5.9.3"
 	}
 }
